Run pip in non-interactive mode for uninstall

--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -24,7 +24,7 @@ jobs:
         cd OCP/pywrap
         python setup.py install
         cd ..
-        pip uninstall path.py
+        pip uninstall --yes path.py
         pip install path
         pywrap all ocp.toml
         cmake -S OCP -B build
