--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Build Miniconda environment
       shell: bash --login {0}
       run: |
-        sudo apt install -y libgl1-mesa-dev
+        sudo apt install -y build-essential libgl1-mesa-dev
         git clone --recurse-submodules https://github.com/CadQuery/OCP.git
         cd OCP
         conda env create -f env.yml -n ocp
