--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -34,4 +34,4 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: cq-cli-Linux-x86_64
-        path: build
+        path: OCP/build
