--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -33,6 +33,7 @@ jobs:
       shell: bash --login {0}
       run: |
         conda activate ocp
+        cd OCP
         cmake -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -S OCP -B build
         cmake -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON --build build
     - name: Find library
