--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -36,12 +36,12 @@ jobs:
         cd OCP
         cmake -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -S OCP -B build
         cmake -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON --build build
-        cd /home/runner/work/ocp-build-system/ocp-build-system/OCP/build
-        make VERBOSE=1
+        # cd /home/runner/work/ocp-build-system/ocp-build-system/OCP/build
+        # make VERBOSE=1
     - name: Find library
       shell: bash --login {0}
       run: |
-        sudo find / -iname OCP*.so
+        find /home/runner/work/ocp-build-system -iname *.so
     - uses: actions/upload-artifact@v2
       with:
         name: OCP-Linux-x86_64
