--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -48,5 +48,5 @@ jobs:
       with:
         name: OCP-Linux-x86_64
         path: |
-          /home/runner/work/ocp-build-system/ocp-build-system/OCP/build/*.so
+          # /home/runner/work/ocp-build-system/ocp-build-system/OCP/build/*.so
           /home/runner/work/ocp-build-system/ocp-build-system/dist/*.whl
