--- a/.github/workflows/cibuildwheel.yml
+++ b/.github/workflows/cibuildwheel.yml
@@ -16,14 +16,30 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          miniconda-version: "latest"
+          auto-update-conda: true
+          python-version: 3.8
+          activate-environment: build
+      - name: Setup OCP environment
+        run: |
+          git clone --recurse-submodules https://github.com/CadQuery/OCP.git
+          cd OCP
+          conda env create -f env.yml -n ocp
+
       # Used to host cibuildwheel
       - uses: actions/setup-python@v2
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.3.1
+        run: |
+          conda activate ocp
+          python -m pip install cibuildwheel==2.3.1
 
       - name: Build wheels
-        run: python -m cibuildwheel --output-dir wheelhouse
+        run: |
+          conda activate ocp
+          python -m cibuildwheel --output-dir wheelhouse
         # to supply options, put them in 'env', like:
         # env:
         #   CIBW_SOME_OPTION: value
