--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -58,9 +58,11 @@ jobs:
       - name: Test wheel
         shell: bash -l {0}
         run: |
-          ! python -c "import OCP"
-          pip install 'git+https://github.com/CadQuery/cadquery' ezdxf multimethod nlopt nptyping typish
-          python -c "import cadquery; cadquery.Workplane('XY').box(1,2,3).toSvg()"
+          conda deactivate
+          pip install dist/*.whl
+          python -c "import OCP"
+      # pip install 'git+https://github.com/CadQuery/cadquery' ezdxf multimethod nlopt nptyping typish
+      # python -c "import cadquery; cadquery.Workplane('XY').box(1,2,3).toSvg()"
 
       # see https://github.com/marketplace/actions/upload-a-build-artifact
       - name: Upload Artifact
