Checking the Python version

--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -59,6 +59,7 @@ jobs:
         shell: bash -l {0}
         run: |
           conda deactivate
+          python --version
           pip install dist/*.whl
           python -c "import OCP"
       # pip install 'git+https://github.com/CadQuery/cadquery' ezdxf multimethod nlopt nptyping typish
