--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -59,7 +59,7 @@ jobs:
         shell: bash -l {0}
         run: |
           conda deactivate
-          conda create --yes -n cadquerytest python={{ matrix.python-version }}
+          conda create --yes -n cadquerytest python=${{ matrix.python-version }}
           conda activate cadquerytest
           pip install dist/*.whl
           python -c "import OCP"
