--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,8 @@
 name: Releases
 
 on:
-  workflow_dispatch
-  # push:
-  #   tags: [ '*' ]
+  push:
+    tags: [ '*' ]
 
 jobs:
 
@@ -37,5 +36,6 @@ jobs:
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
+          verbose: true
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
