--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
       - name: List wheels
         run: |
           mkdir dist
-          mv wheels/**/*win*.whl dist
+          mv wheels/**/*.whl dist
           rm -rf wheels
           ls dist
 
@@ -38,7 +38,7 @@ jobs:
         with:
           verbose: true
           user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
+          # password: ${{ secrets.PYPI_API_TOKEN }}
           # For releasing to test.pypi.org
-          # password: ${{ secrets.PYPI_TEST_API_TOKEN }}
-          # repository_url: https://test.pypi.org/legacy/
+          password: ${{ secrets.PYPI_TEST_API_TOKEN }}
+          repository_url: https://test.pypi.org/legacy/
