--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -41,6 +41,13 @@ jobs:
           python-version: ${{ matrix.python-version }}
           channels: cadquery, conda-forge, defaults
 
+      - name: Ubuntu Deps Setup
+        shell: bash -l {0}
+        run: |
+          if [ "$RUNNER_OS" == "Linux" ]; then
+            sudo apt install -y libegl1 libegl-dev
+          fi
+
       - name: Build wheel
         shell: bash -l {0}
         run: |
