--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -11,11 +11,11 @@ env:
 jobs:
   build:
     name: Build for python ${{ matrix.python-version }} on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}-latest
+    runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
-        os: [ 'ubuntu', 'macos', 'windows' ]
+        os: [ 'ubuntu-18.04', 'macos-latest', 'windows-latest' ]
         python-version: [ '3.8', '3.9', '3.10' ]
 
     steps:
