--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -71,7 +71,7 @@ jobs:
       # Use pyvista build: https://gitlab.kitware.com/vtk/vtk/-/issues/18335
       - name: Manylinux Build 2
         shell: bash -l {0}
-        if: ${{ matrix.os == 'ubuntu-20.04' && matrix.python-version == '3.10' }}
+        if: ${{ matrix.os == 'ubuntu-20.04' }}
         run: |
           export VTK_MANYLINUX=/tmp/vtk-manylinux
           pip install -t $VTK_MANYLINUX --no-deps https://github.com/pyvista/pyvista-wheels/raw/main/vtk-9.1.0.dev0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
