Add patchelf dependency for building wheel
The latest version of auditwheel requires patchelf 0.14, which isn't provided by ubuntu-20.04.  Install it using pip.

--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -57,7 +57,7 @@ jobs:
         shell: bash -l {0}
         run: |
           pip install --upgrade pip
-          pip install build setuptools wheel requests auditwheel delocate delvewheel
+          pip install build setuptools wheel requests auditwheel delocate delvewheel patchelf
 
       - name: Manylinux Build 1
         shell: bash -l {0}
