--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -31,10 +31,8 @@ jobs:
       - name: List downloaded wheels
         run: |
           pwd
-          ls -lR
-          ls -ld ./vtk-wheels/**/vtk-*.whl
-          ls -ld ./vtk-wheels/**/vtk-*-cp${{ matrix.python-version }}-*.whl
-          false
+          find -ls
+          ls -ld ./vtk-wheels/*/vtk-*-cp${{ matrix.python-version }}-*.whl
           
       - name: Checkout project
         uses: actions/checkout@v2
@@ -86,7 +84,7 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-20.04' }}
         run: |
           export VTK_MANYLINUX=/tmp/vtk-manylinux
-          pip install -t $VTK_MANYLINUX --no-deps ./vtk-wheels/**/vtk-*.whl
+          pip install -t $VTK_MANYLINUX --no-deps ./vtk-wheels/*/vtk-*-cp${{ matrix.python-version }}-*.whl
           python -m build --no-isolation --wheel
 
       - name: Conda-only Build
