--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -26,13 +26,12 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-20.04' }}
         with:
           workflow: build-vtk.yml
-          path: /vtk-wheels
+          path: /tmp/vtk-wheels
 
       - name: List downloaded wheels
         run: |
-          pwd
-          find -ls
-          ls -ld /vtk-wheels/*-cp${{ matrix.python-version }}/vtk-*.whl
+          find /tmp/vtk-wheels -ls
+          ls -ld /tmp/vtk-wheels/*-cp${{ matrix.python-version }}/vtk-*.whl
           
       - name: Checkout project
         uses: actions/checkout@v2
@@ -84,7 +83,7 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-20.04' }}
         run: |
           export VTK_MANYLINUX=/tmp/vtk-manylinux
-          pip install -t $VTK_MANYLINUX --no-deps /vtk-wheels/*-cp${{ matrix.python-version }}/vtk-*.whl
+          pip install -t $VTK_MANYLINUX --no-deps /tmp/vtk-wheels/*-cp${{ matrix.python-version }}/vtk-*.whl
           python -m build --no-isolation --wheel
 
       - name: Conda-only Build
