--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -20,6 +20,10 @@ jobs:
       - name: Checkout project
         uses: actions/checkout@v2
 
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+
       - name: Ubuntu Deps
         shell: bash -l {0}
         run: |
