--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -24,6 +24,14 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Setup Python Env
+        shell: bash -l {0}
+        # The `bdist_wheel` command requires the `wheel` package
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip install --upgrade wheel
+          python3 -m pip freeze
+
       - name: Ubuntu Deps
         shell: bash -l {0}
         run: |
