--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ 'ubuntu-20.04', 'macos-latest', 'windows-latest' ]
+        os: [ 'ubuntu-20.04', 'macos-11', 'windows-latest' ]
         python-version: [ '3.8', '3.9', '3.10', '3.11' ]
 
     steps:
